Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30002
  selector:
    app: fastapi-app
